# credit-scoring-feature-factory

./: .gitignore  AGENT_TEAM_PROMPT.md  Makefile  README.md  docker-compose.yml  panel_sorulari.md  pyproject.toml  pytest.ini  requirements.txt
config/: base_config.yaml  classic_model.yaml  data_config.yaml  feature_config.yaml  model_config.yaml  model_development.yaml  quality_config.yaml
config/environments/: dev.yaml  prod.yaml
docs/: DATAPROC_FEATURE_GENERATION_GUIDE.md  model_development_methodology.md  notebook_guide.md
docs/methodology/: model_evaluation.md  overview.md  scorecard.md  variable_elimination.md
docs/templates/: run_report.md.j2
notebooks/: classic_model_development.ipynb  model_development.ipynb
scripts/: dataproc_feature_job.py  deploy_to_dataproc.sh  generate_data_dictionary.py  generate_docs.py  generate_sample_data.py  run_classic_model.py  run_model_development.py  run_pipeline.py  spark_cluster_test.py  spark_docker_test.py  spark_feature_extraction.py  spark_local_test.py
src/: __init__.py
src/classic_model/: __init__.py  model_adapter.py  pipeline.py  scorecard.py
src/components/: __init__.py  constant_filter.py  correlation_filter.py  data_splitter.py  feature_selector.py  iv_filter.py  missing_filter.py  model_evaluator.py  psi_filter.py
src/config/: __init__.py  loader.py  schema.py
src/core/: __init__.py  base.py  config_manager.py  exceptions.py  logger.py
src/data/: __init__.py  base_reader.py  bigquery_reader.py  data_splitter.py  schema_validator.py
src/evaluation/: __init__.py  (+6 more)
tests/: conftest.py
(+83 files in other folders)
